--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
 	<!-- Jim disable
 	script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?autoload=true&skin=Desert"></script-->
     <link href="/feed/" rel="alternate" title="{{ site.author }}" type="application/atom+xml" />
-    <link rel="shortcut icon" href="/favicon.ico"/>
-	<link rel="icon" href="http://blog.sevenche.com/favicon.ico"/>
+    <link rel="shortcut icon" href="/rain_thunder.ico"/>
+	<link rel="icon" href="http://rainlandlee.github.io/rain_thunder.ico"/>
 
     <link rel="stylesheet" href="/media/css/highlight.css">
     <link href='/media/webfonts/ss-social.css' rel='stylesheet'>
@@ -49,7 +49,7 @@
       </div>
 
     <footer>
-        <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> | Free hosted at <a href="https://github.com/dashjim">Github</a> | Copyright 2014 - {{site.time | date:"%Y"}}  
+        <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> | Free hosted at <a href="https://github.com/rainlandlee">Github</a> | Copyright 2014 - {{site.time | date:"%Y"}}  
 		<!-- *** Please Keep bellow link for at least 6 months! Thanks！*** -->
 		<a href="http://blog.sevenche.com">Template Maintained by Jim</a>
 		
