--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 <section class="meta">
 <hr/>
 <span class="author">
-  <a href="http://blog.sevenche.com">{{ site.author }}</a> - 程序员，近10年工作经验集中在Java, Android, C++，现就职于上海。
+  <a href="http://rainlandlee.github.io/">{{ site.author }}</a> - 程序员。
 </span>
 <br />
 <span class="license">
